--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/postboxsys?useUnicode=true&use
 spring.datasource.dbcp2.driver=com.mysql.cj.jdbc.Driver
 # Username and password
 spring.datasource.username =root
-spring.datasource.password = root
+spring.datasource.password = zh29
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
@@ -16,3 +16,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #the jdbc driver used
 spring.datasource.Driver=com.mysql.cj.jdbc.Driver
+
